--- a/style.jetlify.css
+++ b/style.jetlify.css
@@ -1,15 +1,29 @@
 .price-perlify {
-	background-color: #29C455;
-	color: #ffffff;
-	padding: 10px;
+	position: relative;
+	padding: 10px 0 10px 10px;
+	margin-top: 5px;
+	overflow: hidden;
+	background-color: #fff;
+	color: #000;
+	border: 3px solid #29C455;
     border-radius: 2px;
-    text-align: center;
     transition: background-color .2s;
 	-webkit-transition: background-color .2s;
 }
 
 .price-perlify p {
 	margin-bottom: 0;	
+	font-size: 14px;
+}
+
+.price-perlify svg {
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+.price-perlify svg text {
+	font-weight: 700;
 }
 
 .price-value {
@@ -18,21 +32,32 @@
 }
 
 .green {
-	background-color: #29C455;
-	color: #ffffff;
+	border-color: #29C455;
+}
+
+.green svg polygon {
+	fill: #29C455;
 }
 
 .red {
-	background-color: #B80C09;
+	border-color: #B80C09;
 }
 
 .pending {
-	background-color: #333;
-	color: #ffffff;
+	border-color: #333;
+	border-width: 1px;
+	color: #000;
 }
 
 .error {
-	background-color: rgba(0,0,0,.35);
+	border-color: rgba(0,0,0,.35);
+	color: rgba(0,0,0,.65);
+	margin: 10px auto;
+	width: 60%;
+}
+
+.error svg polygon, .error svg text {
+	fill: rgba(0,0,0,.35);
 }
 
 .product-tiles .tile-pricing-block {
