Sorts nodeList based on price

--- a/style.jetlify.css
+++ b/style.jetlify.css
@@ -39,8 +39,36 @@
 	fill: #29C455;
 }
 
-.red {
+.green-1 {
+	border-color: #009122;
+}
+
+.green-2 {
+	border-color: #29C455;
+}
+
+.green-3 {
+	border-color: #5CF788;
+}
+
+.yellow-1 {
+	border-color: #FFFF51: 
+}
+
+.yellow-2 {
+	border-color: #FFFF83;
+}
+
+.red-1 {
 	border-color: #B80C09;
+}
+
+.red-2 {
+	border-color: #EB3F3C;
+}
+
+.red-3 {
+	border-color: #FF726F;
 }
 
 .pending {
